--- a/hra/index.html
+++ b/hra/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hadí Hra</title>
+    <title>Hadí hra</title>
     <style>
         canvas { background: black; display: block; margin: auto; }
     </style>
@@ -15,11 +15,35 @@
         const ctx = canvas.getContext("2d");
 
         let snake = [{ x: 200, y: 200 }];
-        let apple = { x: 100, y: 100 };
+        let apple = getRandomApplePosition();
         let direction = { x: 20, y: 0 };
+        let growing = false;
+
+        function getRandomApplePosition() {
+            return {
+                x: Math.floor(Math.random() * (canvas.width / 20)) * 20,
+                y: Math.floor(Math.random() * (canvas.height / 20)) * 20
+            };
+        }
 
         function gameLoop() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Pohyb hada
+            let newHead = { x: snake[0].x + direction.x, y: snake[0].y + direction.y };
+
+            // Detekce jídla jablka
+            if (newHead.x === apple.x && newHead.y === apple.y) {
+                apple = getRandomApplePosition();
+                growing = true;
+            }
+
+            snake.unshift(newHead);
+            if (!growing) {
+                snake.pop();
+            } else {
+                growing = false;
+            }
 
             // Nakreslit hada
             ctx.fillStyle = "green";
@@ -29,19 +53,14 @@
             ctx.fillStyle = "red";
             ctx.fillRect(apple.x, apple.y, 20, 20);
 
-            // Pohyb hada
-            let newHead = { x: snake[0].x + direction.x, y: snake[0].y + direction.y };
-            snake.unshift(newHead);
-            snake.pop();
-
             setTimeout(gameLoop, 100);
         }
 
         document.addEventListener("keydown", event => {
-            if (event.key === "ArrowUp") direction = { x: 0, y: -20 };
-            if (event.key === "ArrowDown") direction = { x: 0, y: 20 };
-            if (event.key === "ArrowLeft") direction = { x: -20, y: 0 };
-            if (event.key === "ArrowRight") direction = { x: 20, y: 0 };
+            if (event.key === "ArrowUp" && direction.y === 0) direction = { x: 0, y: -20 };
+            if (event.key === "ArrowDown" && direction.y === 0) direction = { x: 0, y: 20 };
+            if (event.key === "ArrowLeft" && direction.x === 0) direction = { x: -20, y: 0 };
+            if (event.key === "ArrowRight" && direction.x === 0) direction = { x: 20, y: 0 };
         });
 
         gameLoop();
